2003-03-17  Mo DeJong  <mdejong@users.sourceforge.net>

	Add tcljava-130-2003-03-17 tag to mark the
	1.3.0 release.

2003-03-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/tcl/get.test: Fix syntax error and
	add knownbug constraint to test that fails.
	* tests/tcljava/FuncSig.test: Comment out
	test case that depends on a feature in the
	source that was disabled.
	* tests/tcljava/JavaDefineClassCmd.test:
	Use binary translation when reading .class
	files for both Jacl and Tcl Blend. This is
	needed to fix a failing test in Jacl, as
	a result of the recent IO upgrade.

2003-03-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Revamp the dist target, updates
	are needed since lots of things about file
	layout have changed. Copy the xputils dir out
	of the src subdir when installing Tcl Blend.
	Don't bother building a .Z file via dist.
	* configure: Regen.
	* configure.in: Rework AC_OUTPUT so that only
	the needed files are emitted for a Jacl or
	Tcl Blend configure.

2003-03-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/inprogress/CallFrame.test:
	* tests/inprogress/ExprCmd.test:
	* tests/inprogress/GlobCmd.test:
	* tests/inprogress/Unicode.test:
	* tests/inprogress/Util.test:
	* tests/jacl/FileCmd.test:
	* tests/jacl/Interp.test:
	* tests/tcl/error.test:
	* tests/tcl/expr-old.test:
	* tests/tcl/expr.test:
	* tests/tcl/fileName.test:
	* tests/tcl/for.test:
	* tests/tcl/format.test:
	* tests/tcl/get.test:
	* tests/tcl/if.test:
	* tests/tcl/interp.test:
	* tests/tcl/io.test:
	* tests/tcl/ioCmd.test:
	* tests/tcl/lsearch.test:
	* tests/tcl/misc.test:
	* tests/tcl/namespace.test:
	* tests/tcl/parse.test:
	* tests/tcl/parseOld.test:
	* tests/tcl/platform.test:
	* tests/tcl/proc-old.test:
	* tests/tcl/proc.test:
	* tests/tcl/regexp.test:
	* tests/tcl/scan.test:
	* tests/tcl/security.test:
	* tests/tcl/set-old.test:
	* tests/tcl/split.test:
	* tests/tcl/string.test:
	* tests/tcl/switch.test:
	* tests/tcl/timer.test: